projects/compiler/test/typechecker/tuple/error_type_mismatch.2.out
Error at %FILE_NAME%:2:28
Type mismatch
  |  val t: (Int, String) = (1, s)
                                ^
Expected: String
but instead found: String?
